[gd_scene load_steps=2 format=2]

[ext_resource path="res://Src/Objects/DiagCaller.gd" type="Script" id=1]

[node name="DiagCaller" type="Area2D"]
collision_layer = 0
collision_mask = 4
script = ExtResource( 1 )

[node name="DelayTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_DiagCaller_body_entered"]
[connection signal="timeout" from="DelayTimer" to="." method="_on_DelayTimer_timeout"]
